lib/src/snapshots/gql_safeguard_lib__snapshot__tests__edge_cases_error.snap
---
source: lib/src/snapshot.rs
expression: error_message
---
Parsing error: query parse error: Parse error at 6:7
Unexpected unexpected character '/'
Expected }
