lib/src/snapshots/gql_safeguard_lib__snapshot__tests__invalid_fixtures.snap
---
source: lib/src/snapshot.rs
expression: snapshot
---
=== ../fixtures/invalid/partial_protection.ts ===
File: ../fixtures/invalid/partial_protection.ts
├── GraphQL Block 1
|   └── Fragment: ProtectedFragment @catch
|       ├── Field: sensitiveData @throwOnFieldError ⚠️
|       └── Field: otherData
├── GraphQL Block 2
|   └── Fragment: UnprotectedFragment
|       ├── Field: riskyField @throwOnFieldError ⚠️
|       └── Field: normalField
└── GraphQL Block 3
    └── Query: MixedQuery
        └── Field: user

=== ../fixtures/invalid/unprotected_nested.ts ===
File: ../fixtures/invalid/unprotected_nested.ts
├── GraphQL Block 1
|   └── Fragment: UserBasicInfo
|       ├── Field: id
|       ├── Field: name
|       └── Field: email
├── GraphQL Block 2
|   └── Fragment: UserAvatar
|       ├── Field: avatar @throwOnFieldError ⚠️
|       └── Field: avatarUrl
├── GraphQL Block 3
|   └── Fragment: UserDetails
|       ├── Field: bio
|       ├── Fragment: ...UserBasicInfo
|       └── Fragment: ...UserAvatar
└── GraphQL Block 4
    └── Query: GetFullUser
        └── Field: user

=== ../fixtures/invalid/missing_catch.tsx ===
File: ../fixtures/invalid/missing_catch.tsx
└── GraphQL Block 1
    └── Query: GetUserProfile
        └── Field: user
