lib/src/snapshots/gql_safeguard_lib__snapshot__tests__simple_snapshot.snap
---
source: lib/src/snapshot.rs
expression: snapshot_content.trim()
---
Query: GetUser @catch
└── Field: user
