lib/src/snapshots/gql_safeguard_lib__snapshot__tests__valid_fixtures.snap
---
source: lib/src/snapshot.rs
expression: snapshot
---
=== ../fixtures/valid/fragment_level_catch.ts ===
File: ../fixtures/valid/fragment_level_catch.ts
├── GraphQL Block 1
|   └── Fragment: RiskyUserData @catch
|       ├── Field: sensitiveInfo @throwOnFieldError ⚠️
|       ├── Field: backupEmail @throwOnFieldError ⚠️
|       └── Field: internalId
└── GraphQL Block 2
    └── Query: GetUserWithRiskyData
        └── Field: user

=== ../fixtures/valid/nested_fragments_protected.ts ===
File: ../fixtures/valid/nested_fragments_protected.ts
├── GraphQL Block 1
|   └── Fragment: UserBasicInfo
|       ├── Field: id
|       ├── Field: name
|       └── Field: email
├── GraphQL Block 2
|   └── Fragment: UserAvatar @catch
|       ├── Field: avatar @throwOnFieldError ⚠️
|       └── Field: avatarUrl
├── GraphQL Block 3
|   └── Fragment: UserDetails
|       ├── Field: bio
|       ├── Fragment: ...UserBasicInfo
|       └── Fragment: ...UserAvatar
└── GraphQL Block 4
    └── Query: GetFullUser
        └── Field: user

=== ../fixtures/valid/query_with_catch.tsx ===
File: ../fixtures/valid/query_with_catch.tsx
└── GraphQL Block 1
    └── Query: GetUserProfile @catch
        └── Field: user
